--- a/submit1-10.html
+++ b/submit1-10.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <div class="headerline"></div>
+    <header></header>
 
     <main>
      <section class="article">
@@ -35,6 +35,6 @@
     </section>
     </main>
 
-    <div class="footerline"></div>
+    <footer></footer>
   </body>
 </html>
